phone nav maqueted

--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
     <title>Frontend Mentor 1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="body">
     <div class="landing-container">
       <div class="phone-container">
         <div class="phone">
-          <div class="nav">
-            <img src="" alt="<" />
-            <img src="" alt="O" />
-            <div class="nav-text">
-              <h5>name</h5>
-              <p>status</p>
+          <div class="nav-container">
+            <div class="content">
+              <img class="arrow-top" src="images/arrow-top.svg" alt="" />
+              <img
+                class="profile-picture"
+                src="images/avatar.jpg"
+                alt="profile"
+              />
+              <div class="nav-text">
+                <p class="name">Samuel Green</p>
+                <p class="status">Available to Walk</p>
+              </div>
+              <img class="menu" src="images/mas.svg" alt="menu" />
             </div>
-            <img src="" alt=":" />
           </div>
-          <div class="chat">
+          <div class="chat-container">
             <div class="chat-text-left">
               <p>jadsjadasjd</p>
             </div>
@@ -58,8 +64,8 @@
         </div>
       </div>
       <div class="text-container">
-        <h1>Simple booking</h1>
-        <p>
+        <p class="tex-container-title">Simple booking</p>
+        <p class="tex-container-description">
           Stay in touch with our dog walkers through the chat interface. This
           makes it easy to discuss arrangements and make bookings. Once the walk
           has been completed you can rate your walker and book again all through
