--- a/index.html
+++ b/index.html
@@ -26,39 +26,44 @@
             </div>
           </div>
           <div class="chat-container">
-            <div class="chat-text-left">
-              <p>jadsjadasjd</p>
-            </div>
-            <div class="chat-text-left">
-              <p>jadsjadasjd</p>
-            </div>
-            <div class="stickers-container">
-              <img src="" alt="1" />
-              <img src="" alt="2" />
-              <img src="" alt="3" />
-            </div>
-            <div class="chat-text-right">
-              <p>jasdjasdjasj</p>
-            </div>
-            <div class="chat-text-right">
-              <p>jasdjasdjasj</p>
-            </div>
-            <div class="chat-text-left">
-              <p>jadsjadasjd</p>
-            </div>
-            <div class="price-container">
-              <input type="checkbox" />
-              <p>30 minute walk</p>
-              <span>$29</span>
-            </div>
-            <div class="price-container">
-              <input type="checkbox" />
-              <p>1 hour walk</p>
-              <span>$49</span>
-            </div>
-            <div class="input-container">
-              <p>Type a message</p>
-              <img src="" alt=">" />
+            <div class="content">
+              <div class="chat-text-left">
+                <p>That sounds great. I'd be happy to discuss more.</p>
+              </div>
+              <div class="chat-text-left">
+                <p>Could you send over some pictures of your dog, please?</p>
+              </div>
+              <div class="stickers-container">
+                <img src="" alt="1" />
+                <img src="" alt="2" />
+                <img src="" alt="3" />
+              </div>
+              <div class="chat-text-right">
+                <p>Here are a few pictures. She's a happy gitl!</p>
+              </div>
+              <div class="chat-text-right">
+                <p>Can you make it?</p>
+              </div>
+              <div class="chat-text-left">
+                <p>
+                  She looks so happy! The time we discussed works. How long
+                  shall I take her out for ?
+                </p>
+              </div>
+              <div class="price-container">
+                <input type="checkbox" />
+                <p>30 minute walk</p>
+                <span>$29</span>
+              </div>
+              <div class="price-container">
+                <input type="checkbox" />
+                <p>1 hour walk</p>
+                <span>$49</span>
+              </div>
+              <div class="input-container">
+                <p>Type a message</p>
+                <img src="" alt=">" />
+              </div>
             </div>
           </div>
         </div>
