--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor 1</title>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body">
@@ -34,9 +35,9 @@
                 <p>Could you send over some pictures of your dog, please?</p>
               </div>
               <div class="stickers-container">
-                <img src="" alt="1" />
-                <img src="" alt="2" />
-                <img src="" alt="3" />
+                <img src="images/dog-image-1.jpg" alt="1" />
+                <img src="images/dog-image-2.jpg" alt="2" />
+                <img src="images/dog-image-3.jpg" alt="3" />
               </div>
               <div class="chat-text-right">
                 <p>Here are a few pictures. She's a happy gitl!</p>
@@ -51,18 +52,26 @@
                 </p>
               </div>
               <div class="price-container">
-                <input type="checkbox" />
-                <p>30 minute walk</p>
-                <span>$29</span>
+                <div class="content">
+                  <input class="checkbox" type="checkbox" id="checkbox" />
+                  <label class="switch" for="checkbox"> </label>
+                  <p>30 minute walk</p>
+                  <span>$29</span>
+                </div>
               </div>
               <div class="price-container">
-                <input type="checkbox" />
-                <p>1 hour walk</p>
-                <span>$49</span>
+                <div class="content">
+                  <input class="checkbox" type="checkbox" id="checkbox2" />
+                  <label class="switch" for="checkbox2"> </label>
+                  <p>1 hour walk</p>
+                  <span>$49</span>
+                </div>
               </div>
               <div class="input-container">
                 <p>Type a message</p>
-                <img src="" alt=">" />
+                <div class="buttom">
+                  <img src="./images/arrow-bottom.svg" alt="submint" />
+                </div>
               </div>
             </div>
           </div>
