--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
           </div>
           <div class="chat-container">
             <div class="content">
-              <div class="chat-text-left">
+              <div class="chat-text-left" id="one">
                 <p>That sounds great. I'd be happy to discuss more.</p>
               </div>
-              <div class="chat-text-left">
+              <div class="chat-text-left" id="two">
                 <p>Could you send over some pictures of your dog, please?</p>
               </div>
-              <div class="stickers-container">
+              <div class="stickers-container" id="three">
                 <img src="images/dog-image-1.jpg" alt="1" />
                 <img src="images/dog-image-2.jpg" alt="2" />
                 <img src="images/dog-image-3.jpg" alt="3" />
               </div>
-              <div class="chat-text-right">
+              <div class="chat-text-right" id="for">
                 <p>Here are a few pictures. She's a happy gitl!</p>
               </div>
-              <div class="chat-text-right">
+              <div class="chat-text-right" id="five">
                 <p>Can you make it?</p>
               </div>
-              <div class="chat-text-left">
+              <div class="chat-text-left" id="six">
                 <p>
                   She looks so happy! The time we discussed works. How long
                   shall I take her out for ?
                 </p>
               </div>
-              <div class="price-container">
+              <div class="price-container" id="seven">
                 <div class="content">
                   <input class="checkbox" type="checkbox" id="checkbox" />
                   <label class="switch" for="checkbox"> </label>
@@ -59,9 +59,14 @@
                   <span>$29</span>
                 </div>
               </div>
-              <div class="price-container">
+              <div class="price-container" id="eight">
                 <div class="content">
-                  <input class="checkbox" type="checkbox" id="checkbox2" />
+                  <input
+                    class="checkbox"
+                    checked="checked"
+                    type="checkbox"
+                    id="checkbox2"
+                  />
                   <label class="switch" for="checkbox2"> </label>
                   <p>1 hour walk</p>
                   <span>$49</span>
