--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
                 <p class="name">Samuel Green</p>
                 <p class="status">Available to Walk</p>
               </div>
-              <img class="menu" src="images/mas.svg" alt="menu" />
+              <div class="nav-mas" onclick="this.classList.toggle('active')">
+                <img class="menu" src="images/mas.svg" alt="menu" />
+                <div class="menu-active">
+                  <img src="images/github.svg" alt="Github-Repo" />
+                  <a
+                    href="https://github.com/imjosehidalgo/des1"
+                    target="_blank"
+                    >Site Repository</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
           <div class="chat-container">
@@ -83,7 +93,7 @@
         </div>
       </div>
       <div class="text-container">
-        <p class="tex-container-title">Simple booking</p>
+        <h2 class="tex-container-title">Simple booking</h2>
         <p class="tex-container-description">
           Stay in touch with our dog walkers through the chat interface. This
           makes it easy to discuss arrangements and make bookings. Once the walk
